# imx-forge

./: .clang-format  .clangd  .gitignore  .gitmodules  404.html  CONTRIBUTING.md  CONTRIBUTORS.md  QUICK_START.html  QUICK_START.md  README.md  hashmap.json  index.html  mkdocs.yml  package.json  pnpm-lock.yaml  project.config.ts  roadmap.md
architecture/: BUILD_SYSTEM.html  PATCH_SYSTEM.html  SYSTEM_ARCHITECTURE.html  index.html
assets/: QUICK_START.md.BaD6pVuo.js  QUICK_START.md.BaD6pVuo.lean.js  QUICK_START.md.CT3y_5Q7.js  QUICK_START.md.CT3y_5Q7.lean.js  QUICK_START.md.D1wver6k.js  QUICK_START.md.D1wver6k.lean.js  app.BuEahvpj.js  app.CNREBw-c.js  app.Cg0WI2v4.js  architecture_BUILD_SYSTEM.md.DObUoSyL.js  architecture_BUILD_SYSTEM.md.DObUoSyL.lean.js  architecture_PATCH_SYSTEM.md.DzL07Kb7.js  architecture_PATCH_SYSTEM.md.DzL07Kb7.lean.js  architecture_SYSTEM_ARCHITECTURE.md.DLhDBqiU.js  architecture_SYSTEM_ARCHITECTURE.md.DLhDBqiU.lean.js  architecture_index.md.CenKrnkY.js  ci_ci-build.md.DHZM0FJ2.js  ci_ci-build.md.DHZM0FJ2.lean.js  ci_ci-full.md.BoE0Z8Wb.js  ci_ci-full.md.BoE0Z8Wb.lean.js  ci_ci-pr.md.B-eKsdr-.js  ci_ci-pr.md.B-eKsdr-.lean.js  ci_docker-publish.md.7LBK_hWs.js  ci_docker-publish.md.7LBK_hWs.lean.js  ci_index.md.BX9XJ2NS.js  ci_index.md.BX9XJ2NS.lean.js  development_ENVIRONMENT_SETUP.md.Bq9ws8RT.js  development_ENVIRONMENT_SETUP.md.Bq9ws8RT.lean.js  index.md.Bg9r-1bi.lean.js  (+613 more)
scripts/document/: check_links.py  fix_links.py  mkdocs_dev.sh  pyproject.toml
scripts/document/imx_forge_docs.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+825 files in other folders)
