[project]
name = "imx-forge-docs"
version = "0.1.0"
description = "IMX-Forge documentation development environment"
requires-python = ">=3.10"
dependencies = [
    "mkdocs-material>=9.5.0",
    "mkdocs-awesome-pages-plugin>=2.9.0",
    "mkdocs-git-revision-date-localized-plugin>=1.2.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
]
